@@ -3,6 +3,11 @@
 # $Header: $
 
   14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  +cacti/netapp/scripts/get_netapp_disk_rbytes.pl,
+  +cacti/netapp/scripts/get_netapp_disk_wbytes.pl:
+  Adding a script to get the disk read/write bytes.
+
+  14 Nov 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/scripts/ss_netapp.php:
   It helps if I add the script.
 
